# libmodbus

./: .appveyor.yml  .bzrignore  .clabot  .clang-format  .dir-locals.el  .editorconfig  .gitignore  .travis-ci.sh  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL  ISSUE_TEMPLATE.md  MIGRATION  Makefile.am  NEWS  NEWS.md  README  README.md  README.rst  SECURITY.md  TODO  acinclude.m4  autogen.sh  config.h.cmake  configure.ac  libmodbus.pro  libmodbus.spec  libmodbus.spec.in  libsynmodbus.pc.in  meson.build  mkdocs.yml  modbus-version.h.in  modbus.pc.in  run-coverage.sh  waf  wscript
.github/: FUNDING.yml
.github/workflows/: build.yml  c-cpp.yml  cifuzz.yml  fuzzing.yml  meson-build.yml
contrib/: acinclude.m4
contrib/win32/: modbus.vcproj
debian/: changelog  control  copyright  libmodbus-dev.docs  libmodbus-dev.examples  libmodbus-dev.install  libmodbus.install  libmodbus5.install  libsynmodbus-dev.docs  libsynmodbus-dev.install  libsynmodbus-dev.manpages  libsynmodbus5.examples  libsynmodbus5.install  rules  watch
doc/: CMakeLists.txt  Makefile.am  asciidoc.conf  libmodbus.txt  modbus_close.txt  modbus_connect.txt  modbus_disable_quirks.txt  modbus_enable_quirks.txt  modbus_flush.txt  modbus_free.txt  modbus_get_byte_from_bits.txt  modbus_get_byte_timeout.txt  modbus_get_client_context.txt  modbus_get_float.txt  modbus_get_float_abcd.txt  modbus_get_float_badc.txt  modbus_get_float_cdab.txt  modbus_get_float_dcba.txt  modbus_get_float_swapped.txt  modbus_get_header_length.txt  modbus_get_indication_timeout.txt  modbus_get_response_timeout.txt  modbus_get_slave.txt  modbus_get_socket.txt  modbus_get_timeout_begin.txt  modbus_get_timeout_end.txt  modbus_get_user_data.txt  modbus_mapping_free.txt  modbus_mapping_new.txt  modbus_mapping_new_extend.txt  modbus_mapping_new_start_address.txt  modbus_mapping_new_start_address_extend.txt  modbus_mapping_offset_new.txt  modbus_mask_write_register.txt  modbus_new_rtu.txt  modbus_new_rtutcp.txt  modbus_new_rtutcp_pi.txt  modbus_new_tcp.txt  modbus_new_tcp_pi.txt  modbus_read_bits.txt  (+77 more)
docs/: index.md  modbus_close.md  modbus_connect.md  modbus_disable_quirks.md  modbus_enable_quirks.md  modbus_flush.md  modbus_free.md  modbus_get_byte_from_bits.md  modbus_get_byte_timeout.md  modbus_get_client_context.md  modbus_get_float.md  modbus_get_float_abcd.md  modbus_get_float_badc.md  modbus_get_float_cdab.md  modbus_get_float_dcba.md  modbus_get_header_length.md  modbus_get_indication_timeout.md  modbus_get_query_function.md  modbus_get_response_timeout.md  modbus_get_slave.md  modbus_get_socket.md  modbus_mapping_free.md  modbus_mapping_new.md  modbus_mapping_new_start_address.md  modbus_mask_write_register.md  modbus_new_rtu.md  modbus_new_tcp.md  modbus_new_tcp_pi.md  modbus_read_bits.md  modbus_read_file_record.md  modbus_read_input_bits.md  modbus_read_input_registers.md  modbus_read_registers.md  modbus_receive.md  modbus_receive_confirmation.md  modbus_reply.md  modbus_reply_exception.md  modbus_report_slave_id.md  modbus_rtu_get_rts.md  modbus_rtu_get_rts_delay.md  (+37 more)
docs/assets/: client-sensors.excalidraw  server-grafana.excalidraw
example/: 00_modbus_tcp_listen.c  01_modbus_tcp_connect.c
fuzzer/: FUZZER.md  FuzzClient.c  FuzzServer.c  Makefile
fuzzers/: FuzzClient.c  FuzzServer.c  Makefile.am  README.md
include/: Makefile.am  modbus-tcp.h  modbus.h
include/modbus/: Makefile.am  modbus.h
jni/: Android.mk  Application.mk  config.h.in  configure.py
modbus/: Makefile.am  modbus.c  modbus.h  wscript
rpi-test/: test.c
src/: .gitignore  Makefile.am  dbgprintf.c  default_mapping.c  default_mapping.h  meson.build  modbus-ascii-private.h  modbus-ascii.c  modbus-ascii.h  modbus-config.h.in  modbus-data.c  modbus-enc.c  modbus-enc.h  modbus-gpio.c  modbus-gpio.h  modbus-log.c  modbus-log.h  modbus-private.c  modbus-private.h  modbus-reply-mapping.c  modbus-reply.c  modbus-rtu-private.h  modbus-rtu-tcp.c  modbus-rtu-tcp.h  modbus-rtu-usb-private.h  modbus-rtu-usb.c  modbus-rtu-usb.h  modbus-rtu.c  modbus-rtu.h  modbus-rtutcp-private.h  modbus-rtutcp.c  modbus-rtutcp.h  modbus-serial-private.h  modbus-serial.c  modbus-serial.h  modbus-tcp-private.h  modbus-tcp-server.c  modbus-tcp-server.h  modbus-tcp.c  modbus-tcp.h  (+16 more)
src/esp-idf/: CMakeLists.txt  README.md  component.mk  config.h  idf_component.yml
src/win/: Make-tests  README.md  libmodbus.sln  libmodbus.vcxproj
src/win32/: .gitignore  Make-tests  README.md  README.win32  Readme-win32  UpgradeLog.htm  config.h  config.h.win32  configure.js  modbus-8.vcproj  modbus-9.sln  modbus.dll.manifest  modbus.dll.manifest.in  modbus.rc  modbus.vcproj  modbus.vcxproj  modbus.vcxproj.filters  modbus.vs16.sln  modbus.vs16.vcxproj  unit-test-client.vcproj  unit-test-server.vcproj
src/win32/Backup/: modbus-9.sln
src/win32/Debug/modbus.tlog/: modbus.lastbuildstate
tests/: LICENSE  Makefile.am  README  README.fuzzing.md  README.md  apc-test-client.c  bandwidth-client.c  bandwidth-master.c  bandwidth-server-many-up.c  bandwidth-server-one.c  bandwidth-slave-many-up.c  bandwidth-slave-one.c  bench-bandwidth-master.c  bench-bandwidth-slave.c  dev-id-test-client.c  fuzzing_harness.c  getip.c  meson.build  modbus_registers.txt  pv-invertor-simulation.c  pv_invertor_simulation  random-test-client.c  random-test-master.c  random-test-server.c  random-test-slave.c  read-device-identification-client.c  substation-simulation.c  substation_simulation  tcp-server-test.c  test-gateway-many-up.c  test-gateway.c  test-master-random.c  test-modbus-master.c  unit-test-client.c  unit-test-harness.c  unit-test-master.c  unit-test-netclient  unit-test-netclient.c  unit-test-netserver  unit-test-netserver.c  (+10 more)
vs2010/: .gitignore  libmodbus.props  libmodbus.sln
vs2010/LibModbus.Net/: GlobalSuppressions.cs  LibModbus.Net.csproj  LibModbus.Net.key.snk  Modbus.cs  ModbusException.cs  ModbusRtu.cs  ModbusTcp.cs  ModbusWrap.cs
vs2010/SimpleClientRtu.Net/: CustomDictionary.xml  GlobalSuppressions.cs  SimpleClientRtu.Net.csproj  (+1 more)
zephyr/: CMakeLists.txt  module.yml
(+19 files in other folders)
